deployments/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: fish-app
  namespace: fish
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fish-app
  template:
    metadata:
      labels:
        app: fish-app
    spec:
      containers:
        - name: fish-container
          image: kaushal11/fish:latest
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: fish-service
  namespace: fish
spec:
  selector:
    app: fish-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fish-ingress
  namespace: fish
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt" 
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/redirect-entrypoint: websecure
spec:
  rules:
    - host: fish.kk11.com.np
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fish-service
                port:
                  number: 80
  tls:
    - hosts:
        - fish.kk11.com.np
      secretName: fish-tls-secret
